@@ -6,6 +6,11 @@
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[05/2024]
+	One paper (Assessing News Thumbnail Representativeness) is accepted to <a href="https://2024.aclweb.org/">ACL 2024 Findings</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[03/2024]
 	One paper (Multilingual Representation for Semantic Retrieval) is accepted to <a href="https://sigir-2024.github.io/">SIGIR 2024</a>.
   </li>
